--- a/index.html
+++ b/index.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="en">
 <head>
-	<meta charset="utf-8">
-	<title>Javascript + DOM</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <title>Etch-A-Sketch</title>
 </head>
 <body>
-	<h1>Shopping List</h1>
-	<p id="first">Get err done!</p>
-	<input id="userinput" type="text" placeholder="enter items">
-	<button id="enter">Enter</button>
-	<ul>
-	</ul>
-	<script type="text/javascript" src="script.js"></script>
+    <h1>Etch-A-Sketch</h1>
+    <input id="input" type="text" placeholder="enter grid number" required>
+    <button id="random">random colors</button>
+    <button id="black">black</button>
+    <button id="shade">shade</button>
+    <button id="reset">clear grid</button>
+    <p id="gridNum"></p>
+    <div id="container"></div>
 </body>
+<script src="script.js"></script>
 </html>
