--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <button id="shade">shade</button>
     <button id="reset">clear grid</button>
     <p id="gridNum"></p>
-    <div id="container"></div>
+    <span id="container"></span>
 </body>
 <script src="script.js"></script>
 </html>
