--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <h1>Etch-A-Sketch</h1>
-    <input id="input" type="text" placeholder="enter grid number" required>
+    <input id="input" type="text" placeholder="enter grid number" required/>
     <button id="random">random colors</button>
     <button id="black">black</button>
     <button id="shade">shade</button>
-    <button id="reset">clear grid</button>
+    <button class="active"" id="reset">clear grid</button>
     <p id="gridNum"></p>
     <span id="container"></span>
 </body>
